--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 
 <head>
-  <meta charset="UTF-8">
-  <title>Local Weather - FCC 4 Final</title>
-  
-  
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
+    <meta charset="UTF-8">
+    <title>Local Weather - FCC 4 Final</title>
 
-      <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="jquery-3.3.1.js"></script>
+    <script src="index.js"></script>
 
-  
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
