--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Local Weather - FCC 4 Final</title>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
     <link rel="stylesheet" href="style.css">
