--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-﻿<!DOCTYPE html>
+﻿<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!DOCTYPE html>
 <html lang="en" >
 
 <head>
     <meta charset="UTF-8">
     <title>Local Weather - FCC 4 Final</title>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery-3.3.1.js"></script>
     <script type="text/javascript" src="index.js"></script>
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
